Thu Aug 27 13:51:12 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): random integer can be a fixnum for
	  bignum range.  [ruby-dev:39173]

Thu Aug 27 08:16:34 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/strscan/strscan.c (strscan_set_string): set string should not be
	  dupped or frozen, because freezing it causes #concat method failure,
	  and unnecessary to dup without freezing.  a patch from Aaron
	  Patterson at [ruby-core:25145].

Thu Aug 27 02:06:11 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* Makefile.in (enc/unicode/name2ctype.kwd):
	  remove rules to generate name2ctype.kwd from
	  UnicodeData.txt and Scripts.txt.
	  if you want to generate, use tool/enc-unicode.rb.

Thu Aug 27 02:00:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* unicode.c (PROPERTY_NAME_MAX_SIZE): use MAX_WORD_LENGTH.

Wed Aug 26 23:59:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): refined error message.

	* random.c (random_rand): fixed for edge cases of ranges.
	  [ruby-dev:39166]

Wed Aug 26 21:49:23 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/tempfile.rb: add documents from Hongli Lai's fork.
	  cf [ruby-core:25131].

Wed Aug 26 19:51:13 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/mkconfig.rb (program_transform_name): fix for multiple trans
	  rules for autoconf 2.61 or earlier.

	* tool/rbinstall.rb (program_transform_name): ditto.

Wed Aug 26 19:20:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): unified random_int and random_float.
	  [ruby-dev:39158].  and fixes [ruby-core:24655], [ruby-core:24677],
	  [ruby-core:24679].

Wed Aug 26 18:59:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/test_tempfile.rb: merged from Hongli Lai's fork.
	  cf [ruby-core:25131].

Wed Aug 26 18:49:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#close!): should not undefine finalizer
	  by just unlink.
